<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".EditFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/quantico_bold"
                android:text="@string/text_add_run"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_distance"
                android:layout_width="256dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:autofillHints="Distance"
                android:fontFamily="@font/quantico_bold"
                android:hint="@string/distance_hint_text"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="256dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:autofillHints="Name"
                android:fontFamily="@font/quantico_bold"
                android:hint="@string/name_hint_text"
                android:inputType="text"
                android:maxLength="13"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_distance" />

            <EditText
                android:id="@+id/et_date"
                android:layout_width="256dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints="Date"
                android:fontFamily="@font/quantico_bold"
                android:hint="@string/date_hint_text"
                android:inputType="date"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/quantico_bold"
                android:text="@string/save"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_date" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/quantico_bold"
                android:text="@string/cancel"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/save_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>